# C-SDL2-Windows

./: CMakeLists.txt  main.cpp
